fix lazy load from not loading too tall of an img

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@ footer p {
   animation: fade-in-bottom 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
+.card-img-top {
+  max-height: 400px;
+}
+
 @-webkit-keyframes fade-in-bottom {
   0% {
     -webkit-transform: translateY(50px);
